kubernetes/overlays/homelab/apps/forgejo/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: namespace
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
