kubernetes/overlays/homelab/apps/forgejo/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
  namespace: apps-forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: statefulset
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  serviceName: forgejo
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/instance: homelab
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: homelab
        app.kubernetes.io/managed-by: argocd
    spec:
      nodeSelector:
        kubernetes.io/hostname: node-pi-01
      tolerations:
        - key: homelab.io/pi-reserved
          operator: Equal
          value: "true"
          effect: NoSchedule
      volumes:
        - name: forgejo-config
          emptyDir: {}
        - name: forgejo-config-template
          configMap:
            name: forgejo-config-template
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:14.0.3-rootless
          imagePullPolicy: IfNotPresent
          args:
            - web
            - --config
            - /etc/gitea/app.ini
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: forgejo-config
              mountPath: /etc/gitea
            - name: forgejo-data
              mountPath: /var/lib/gitea
  volumeClaimTemplates:
    - metadata:
        name: forgejo-data
        labels:
          app.kubernetes.io/name: forgejo
          app.kubernetes.io/instance: homelab
          app.kubernetes.io/component: pvc
          app.kubernetes.io/part-of: homelab
          app.kubernetes.io/managed-by: argocd
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: node-pi-01-local
        resources:
          requests:
            storage: 20Gi
