kubernetes/overlays/homelab/apps/forgejo/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: apps-forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: http
